# PlotJuggler

./: CMakeLists.txt  build_windows_installer.cmd  build_windows_v142.cmd
.github/workflows/: codeql.yml  debian.yaml  macos.yaml  pre-commit.yaml  ros2-humble.yaml  ros2-jazzy.yaml  ros2-rolling.yaml  ubuntu.yaml  windows-build.yml  windows.yaml
cmake/: find_or_download_mdflib.cmake
plotjuggler_app/: curve_tracker.cpp  curvelist_panel.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotwidget.cpp  plotwidget.h
plotjuggler_base/include/PlotJuggler/: plotdatabase.h  plotwidget_base.h  stringseries.h
plotjuggler_base/src/: plotwidget_base.cpp  timeseries_qwt.cpp  timeseries_qwt.h
plotjuggler_plugins/: CMakeLists.txt
plotjuggler_plugins/DataLoadMDF/: CMakeLists.txt  dataload_mdf.cpp  dataload_mdf.h
